<resources>
    <string name="app_name">SAC 2.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="sac_feeds">SAC Feeds</string>
    <string name="tcf_19">TCF\'19</string>
    <string name="blogs">Blogs</string>
    <string name="trending">Trending</string>
    <string name="dashboard">My Dashboard</string>
    <string name="intramurals">Intramurals</string>
    <string name="body">Since the beginning of the internet, millions and millions and millions of blogs have been created. Many have died due to lost interest or their owners giving up on the idea, while others have thrived and continue to grow, making money and earning their owners a steady income. It’s a constant evolution of content that keeps people coming back for more, especially if these blogs contact highly resourceful material that people find useful and interesting.Each example listed in this blog post are all different in some way and all bring something unique to their readers and subscribers. I want to show you what is possible and how you can take inspiration from them and create an awesome blog of your own.</string>
    <string name="title_activity_feeds">FeedsActivity</string>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Notice</string>
    <string name="tab_text_3">Results</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="version">2.0</string>
    <string name="channel_name">SAC</string>
    <string name="channel_description">SAC NIT PATNA APP</string>
</resources>
