<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sacfeeds"
        android:icon="@drawable/ic_sac"
        android:title="@string/sac_feeds" />

    <item
        android:id="@+id/navigation_tcf_19"
        android:icon="@drawable/ic_tcf"
        android:title="@string/tcf_19" />

    <item
        android:id="@+id/navigation_blogs"
        android:icon="@drawable/ic_blogs_icon"
        android:title="@string/blogs" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_path_584"
        android:title="@string/trending" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

</menu>
